api - better response codes, better descriptions
