# src/Infrastructure/Http/Actions/Api/openapi.yaml
@@ -11,7 +11,7 @@ paths:
     get:
       security: []
       responses:
-        '200':
+        '204':
           description: Health check
           content: {}
   /user:
@@ -24,7 +24,7 @@ paths:
             schema:
               $ref: '#/components/schemas/UserCredentials'
       responses:
-        '200':
+        '204':
           description: User registered
           content: {}
         '400':
@@ -45,7 +45,7 @@ paths:
         - loginBasicAuth: []
       responses:
         '200':
-          description: Login
+          description: User session started
           content:
             application/json:
               schema:
@@ -53,7 +53,7 @@ paths:
     get:
       responses:
         '200':
-          description: Get existing sessions for user
+          description: Existing sessions for user
           content:
             application/json:
               schema:
